# translation_app

./: .gitignore  pubspec.yaml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/screens/: translation_screen.dart
lib/services/: deepl_service.dart
live_transcribe/: .env.example  .gitignore  deepl_translator.py  display_chat.py  display_columns.py  finetune_whisper_ko.py  live_transcribe.py  merge_and_convert.py  nllb_translator.py  pyproject.toml  qwen_translator.py  summarizer.py  translator.py
live_transcribe/apple/: project.yml
live_transcribe/apple/LiveTranscribe/: AudioBufferProcessor.swift  ContentView.swift  Info.plist  Models.swift  SpeechAnalyzerSession.swift  SpeechRecognitionSession.swift  TranscriptionEngine.swift
live_transcribe/apple/LiveTranscribe.xcodeproj/: project.pbxproj
live_transcribe/apple/LiveTranscribe.xcodeproj/project.xcworkspace/xcuserdata/kilo.xcuserdatad/: UserInterfaceState.xcuserstate
live_transcribe/apple/LiveTranscribe.xcodeproj/xcuserdata/kilo.xcuserdatad/xcschemes/: xcschememanagement.plist
live_transcribe/whisper-ko-lora/checkpoint-210/: adapter_config.json  rng_state.pth  scheduler.pt  trainer_state.json
live_transcribe/whisper-ko-lora/final/: tokenizer.json  tokenizer_config.json
macos/Runner/: Info.plist
macos/Runner.xcodeproj/: project.pbxproj
